# codecrafters-redis-python

./: README.md  pyproject.toml
app/: __init__.py  cli.py  commands.py  kv_store.py  main.py  server.py
app/proto/: ast.py  resp2.py
app/resp2/: __init__.py  ast.py  encoder.py  evaluator.py  obj.py  parser.py
app/server/: __init__.py  handshake.py  info.py  tcp_client.py
