[project]
name = "codecrafters-redis-python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Marcin Paliwoda", email = "paliwoda.marcin@zoho.com" }]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.8",
    "pyupgrade>=3.16.0",
]

[tool.ruff]
line-length = 120
